[gd_scene load_steps=3 format=2]

[ext_resource path="res://Lobby/Lobby_Client.gd" type="Script" id=1]
[ext_resource path="res://Bingo/Bingo.tscn" type="PackedScene" id=2]

[node name="Lobby_Screen" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 1024.0
offset_bottom = 20.0

[node name="Label" type="Label" parent="HBoxContainer"]
offset_top = 3.0
offset_right = 70.0
offset_bottom = 17.0
text = "Username:"

[node name="Username_Label" type="Label" parent="HBoxContainer"]
offset_left = 74.0
offset_top = 3.0
offset_right = 129.0
offset_bottom = 17.0
text = "Testuser"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
offset_left = 133.0
offset_right = 1024.0
offset_bottom = 20.0
size_flags_horizontal = 3
alignment = 2

[node name="Menu_Button" type="Button" parent="HBoxContainer/HBoxContainer"]
offset_left = 800.0
offset_right = 891.0
offset_bottom = 20.0
text = "Leave Game"

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
offset_top = 24.0
offset_right = 1024.0
offset_bottom = 38.0

[node name="Label" type="Label" parent="HBoxContainer3"]
offset_right = 143.0
offset_bottom = 14.0
text = "Current Session Score:"

[node name="Bingo_Score" type="Label" parent="HBoxContainer3"]
offset_left = 147.0
offset_right = 155.0
offset_bottom = 14.0
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
visible = false
offset_top = 18.0
offset_right = 1024.0
offset_bottom = 32.0

[node name="Label" type="Label" parent="HBoxContainer2"]
offset_right = 62.0
offset_bottom = 14.0
text = "Lobby-Nr:"

[node name="Lobby_Nr_Label" type="Label" parent="HBoxContainer2"]
offset_left = 66.0
offset_right = 106.0
offset_bottom = 14.0
text = "53466"

[node name="Bingo" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 262.0
offset_top = 42.0
offset_right = 762.0
offset_bottom = 542.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Control" type="Control" parent="."]
offset_top = 546.0
offset_right = 1024.0
offset_bottom = 546.0
mouse_filter = 2

[node name="AcceptDialog" type="AcceptDialog" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.3108
offset_top = -313.221
offset_right = 69.6892
offset_bottom = -255.221
window_title = "Warnung!"
dialog_text = "User X got a Bingo!"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HBoxContainer/HBoxContainer/Menu_Button" to="." method="_on_Menu_Button_pressed"]
